@@ -89,7 +89,7 @@ public class TokenProvider {
         final Collection<? extends GrantedAuthority> authorities =
                 Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                    .toList();
         return new UsernamePasswordAuthenticationToken(userDetails, "", authorities);
     }
 
